--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -67,7 +67,7 @@
     "<left> This project will explain the process of building a binary linear classier that reads movie reviews and guesses whether they are positive or negative. This approach will build the model from zero in order to understand how it works, the model will not use libraries like Scikit-learn. <br> </left>\n",
     "   <br>\n",
     "      <br>\n",
-    "<left>The goal is to understand the funcitons that make the sthocastic gradient descent algorithm works, to be more specific how is the weight vector adjusted iteration by iteration in order to minimize the loss function,  <br> </left>\n",
+    "<left>The goal is to understand the funcitons that make the sthocastic gradient descent algorithm works, to be more specific how is the weight vector adjusted iteration by iteration in order to minimize the loss function.<br>  <br> </left>\n",
     "\n",
     "<left>The increment function does the above mentioned process but does it change all weights by the same scale or it adjust each weight individually?<br> </left>\n",
     "\n"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6207c3",
+   "id": "0f05f63a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06337473",
+   "id": "dac3f9b9",
    "metadata": {},
    "outputs": [],
    "source": [
