--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -135,17 +135,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "b21fe3f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sentence_1 = 'this is a sample sentence where the word car is repeated twice, car , and the word people is repeated three times people , people are there any other words repeated twice ?'"
+    "Sentence_1 = 'This is a sample sentence where the word car is repeated twice, car , and the word people is repeated three times people , people are there any other words repeated twice or more times?'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "id": "d1dc013e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sample sentence where the word car is repeated twice, car , and the word people is repeated three times people , people are there any other words repeated twice or more times?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Sentence_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "96c42c41",
    "metadata": {},
    "outputs": [
@@ -153,7 +171,7 @@
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {'this': 1,\n",
+       "            {'This': 1,\n",
        "             'is': 3,\n",
        "             'a': 1,\n",
        "             'sample': 1,\n",
@@ -175,10 +193,12 @@
        "             'other': 1,\n",
        "             'words': 1,\n",
        "             'twice': 1,\n",
-       "             '?': 1})"
+       "             'or': 1,\n",
+       "             'more': 1,\n",
+       "             'times?': 1})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63db8c0e",
+   "id": "c56dfc4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565d0a4b",
+   "id": "720aabc6",
    "metadata": {},
    "outputs": [],
    "source": [
