--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -70,23 +70,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5948fbbf",
+   "id": "4d53a1fe",
    "metadata": {},
    "source": [
     "<h1><center>2.Description of Functions</center></h1>\n",
     "<p><left><b>Function List:</b></left></p>\n",
-    "\n",
-    "- Extract Word Features\n",
     "<br><br>\n",
-    "- Vector Dot Proudct\n",
-    "<br><br>\n",
-    "- Vector Increment\n",
-    "<br><br>\n",
-    "- Gradient Descent\n",
-    "<br><br>\n",
-    "- Sthocastic Gradient Descent\n",
-    "<br><br>\n",
-    "- Learn Predictor\n",
+    "- Extract Word Features<br>\n",
+    "- Vector Dot Proudct<br>\n",
+    "- Vector Increment<br>\n",
+    "- Gradient Descent<br>\n",
+    "- Sthocastic Gradient Descent<br>\n",
+    "- Learn Predictor<br>\n",
     "\n",
     "<br>\n",
     "      <br>"
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fecf5188",
+   "id": "ad91a0e7",
    "metadata": {},
    "source": [
     "The extract word features function will take a text sentence as an input and will create a dictionary from the words of this sentence, the words will be the dictionary keys and the values will be how many times the word is in the sentence."
@@ -229,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ec08e2ef",
+   "id": "7df95a28",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "706573dd",
+   "id": "5c3ba173",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30053ef7",
+   "id": "148b5ab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11fc0bf3",
+   "id": "a72dffab",
    "metadata": {},
    "outputs": [],
    "source": [
