--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -5,7 +5,7 @@
    "id": "d21d6fdb",
    "metadata": {},
    "source": [
-    "<h1><center>Sentiment Analysis - Understanding Binary Linear Classifiers </center></h1>\n",
+    "<h1><center>Sentiment Analysis -  Binary Linear Classifiers </center></h1>\n",
     "<h1><center>Understanding how a sentiment analysis algorithm works</center></h1>\n",
     "<h1><center>Rodrigo Medina </center></h1>\n",
     "<h1><center>Based in Materials from Stanford Course <br><br> XCS221  Artificial Intelligence</center>\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a99dd9",
+   "id": "09ab764a",
    "metadata": {},
    "source": [
     "<h1><center>2.Description of Functions</center></h1>\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8105c9",
+   "id": "716ec7e6",
    "metadata": {},
    "source": [
     "The extract word features function will take a text sentence as an input and will create a dictionary from the words of this sentence, the words will be the dictionary keys and the values will be how many times the word is in the sentence."
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "74754b91",
+   "id": "b6c08cd7",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a08b9755",
+   "id": "ee08c344",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73dfc2d5",
+   "id": "b8581343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06bc3ce2",
+   "id": "3367e5c9",
    "metadata": {},
    "outputs": [],
    "source": [
