--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -507,18 +507,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15205867",
+   "id": "fc847e16",
    "metadata": {},
    "source": [
-    "###    <Center>  Feature Vector , Weight Vector, Gradient descent and Stochastic Gradient descent   </Center> \n",
+    "###    <h2><center> Function 2: dotProduct (of two vectors)</center></h2>\n",
     "***\n",
     "\n",
     "<br>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6889ce68",
+   "metadata": {},
+   "source": [
+    "The dot product function is a crucial function for the algorithm<br>\n",
+    "\n",
+    "From the previous function the objective is to create a word count dictionary of all words in the traning examples, for the case of the movie review sentiment analysis we will have a list of 3,000 movie reviews, each review is a string of text, using the extractword features function applied to the list of 3000 training examples, a word count dictionary of aproximately 20,000 words will be produced.\n",
+    "\n",
+    "<br> This word count dictionary will have as keys all words used in the 3,000 training examples and the dictionary will have as values how many times a word appears considering all 3000 examples, this dictionary will be in the following form:\n",
+    "\n",
+    "word_count_dictionary = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 19873' : 3}<br>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "In the context of the algorithm the word count dictionary will be the weight vector, the intial value of each key will be used as the initial weight each word has in influencing the outcome of the prediction if the movie review is positive or negative.\n",
+    "\n",
+    "<br> Applying the extractwordfeatures individually to each review in the training examples will create a feature vector in the form of:\n",
+    "\n",
+    "\n",
+    "Sentence_1 = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 14' : 1} <br>\n",
+    "\n",
+    "\n",
+    "The objective of the dotProduct function is to multiply the weight of each word , the weight value is contained in the word_count_dictionary which is the weight vector, by the number of times the word appears in the sentence, this is called the feature vector, \n",
+    "\n",
+    "This operation is very simple if all the keys in one vector match all the keys in the other vector, but that will not be the case, the feature vector will have 30,000 words-keys, and the review vectors are sentecnes with an average of 15 words.\n",
+    "\n",
+    "So if we multiply word 1 in weight vector by number of times the word is in sentence we obtain a value, but what happens when with the words that are in the weight vector but not in the feature vector, here it is were the dotproduct function comes into play by giving a solution to these type of cases, in the event that a word is not in the feature vector, then the value of this key will be assumed as to be zero:<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45c590c8",
    "metadata": {},
    "outputs": [],
@@ -531,14 +565,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b061e93",
+   "metadata": {},
+   "source": [
+    "Example:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "40071f83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_1 = {'feature 1': 1 , 'feature 2': 3 , 'feature 3': 3 , 'feature 4': 3 , 'feature 5': 3 }\n",
-    "vector_2 = {'feature 1':5 , 'feature 2': 0 , 'feature 3': 4, 'feature 4': 0 , 'feature 5': 3 }"
+    "vector_1 = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 }\n",
+    "vector_2 = {'word 1':5 ,  'word 3': 4,  'word 5': 3 }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b621089",
+   "metadata": {},
+   "source": [
+    "dotProduct(vector_1,vector_2) =  (1 x 5 ) + ( 3 x 0 ) + ( 3 x 4 ) + ( 3 x 0 ) + ( 3 x 3 ) = 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1986d4cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dotProduct(vector_1,vector_2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15205867",
+   "metadata": {},
+   "source": [
+    "###    <Center>  Feature Vector , Weight Vector, Gradient descent and Stochastic Gradient descent   </Center> \n",
+    "***\n",
+    "\n",
+    "<br>"
    ]
   },
   {
