--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -77,7 +77,7 @@
     "<p><left><b>Function List:</b></left></p>\n",
     "\n",
     "- Extract Word Features<br>\n",
-    "- Vector Dot Proudct<br>\n",
+    "- Vector Dot Product<br>\n",
     "- Vector Increment<br>\n",
     "- Gradient Descent<br>\n",
     "- Sthocastic Gradient Descent<br>\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc847e16",
+   "id": "d29448aa",
    "metadata": {},
    "source": [
     "###    <h2><center> Function 2: dotProduct (of two vectors)</center></h2>\n",
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6889ce68",
+   "id": "af52aaee",
    "metadata": {},
    "source": [
     "The dot product function is a crucial function for the algorithm<br>\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b061e93",
+   "id": "f739b7a2",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b621089",
+   "id": "5fee8197",
    "metadata": {},
    "source": [
     "dotProduct(vector_1,vector_2) =  (1 x 5 ) + ( 3 x 0 ) + ( 3 x 4 ) + ( 3 x 0 ) + ( 3 x 3 ) = 26"
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1986d4cb",
+   "id": "62c8825e",
    "metadata": {},
    "outputs": [
     {
