--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29448aa",
+   "id": "ec02daa4",
    "metadata": {},
    "source": [
     "###    <h2><center> Function 2: dotProduct (of two vectors)</center></h2>\n",
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af52aaee",
+   "id": "44e4e5f9",
    "metadata": {},
    "source": [
     "The dot product function is a crucial function for the algorithm<br>\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f739b7a2",
+   "id": "9a806377",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -581,13 +581,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_1 = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 }\n",
-    "vector_2 = {'word 1':5 ,  'word 3': 4,  'word 5': 3 }"
+    "weight_vector = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 }\n",
+    "feature_vector = {'word 1':5 ,  'word 3': 4,  'word 5': 3 }"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5fee8197",
+   "id": "017a716e",
+   "metadata": {},
+   "source": [
+    "The dotProduct function logic is as follows: <br>\n",
+    "\n",
+    "\n",
+    "In word 1, multiply the value of word 1 in the weight vector, times the value of word 1 in the feature vector the operation will be 1 x 5 <br><br>\n",
+    "\n",
+    "In word 2, multiply the value of word 2 in the weight vector, times the value of word 2 in the feature vector, but for word 2, there is no key nor value for word 2 in the feature vector since the word is not in the vector, so the function will assign a value of 0 to the value of word 2 in the feature vector and the operation will be 3 x 0 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "507f2dbc",
    "metadata": {},
    "source": [
     "dotProduct(vector_1,vector_2) =  (1 x 5 ) + ( 3 x 0 ) + ( 3 x 4 ) + ( 3 x 0 ) + ( 3 x 3 ) = 26"
@@ -596,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62c8825e",
+   "id": "720ac9e4",
    "metadata": {},
    "outputs": [
     {
@@ -610,6 +623,14 @@
    "source": [
     "print(dotProduct(vector_1,vector_2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32df12c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
