--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -37,7 +37,10 @@
     "\n",
     "### 4.Implementation\n",
     "***\n",
-    "\n"
+    "\n",
+    "\n",
+    "### 5.Testing with OOS user generated examples.\n",
+    "***\n"
    ]
   },
   {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "aad5076d",
    "metadata": {
     "scrolled": true
@@ -111,7 +114,8 @@
     "import collections\n",
     "import math\n",
     "import sys\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -507,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec02daa4",
+   "id": "a7d52e0a",
    "metadata": {},
    "source": [
     "###    <h2><center> Function 2: dotProduct (of two vectors)</center></h2>\n",
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e4e5f9",
+   "id": "ffc92cef",
    "metadata": {},
    "source": [
     "The dot product function is a crucial function for the algorithm<br>\n",
@@ -566,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a806377",
+   "id": "9a909019",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -587,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017a716e",
+   "id": "0393d960",
    "metadata": {},
    "source": [
     "The dotProduct function logic is as follows: <br>\n",
@@ -600,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507f2dbc",
+   "id": "e020af28",
    "metadata": {},
    "source": [
     "dotProduct(vector_1,vector_2) =  (1 x 5 ) + ( 3 x 0 ) + ( 3 x 4 ) + ( 3 x 0 ) + ( 3 x 3 ) = 26"
@@ -609,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "720ac9e4",
+   "id": "94064659",
    "metadata": {},
    "outputs": [
     {
@@ -625,27 +629,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32df12c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "15205867",
+   "id": "7fa497ef",
    "metadata": {},
    "source": [
-    "###    <Center>  Feature Vector , Weight Vector, Gradient descent and Stochastic Gradient descent   </Center> \n",
+    "###    <h2><center> Function 3: increment (of a vector) </center></h2>\n",
     "***\n",
     "\n",
     "<br>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b417f85c",
+   "metadata": {},
+   "source": [
+    "The increment function is a another crucial function for the algorithm<br>\n",
+    "\n",
+    "This is where the weight vector is adjusted in order to achieve the weight vector that will be optimal for the model based on the examples the model was trained."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "edf382c0",
    "metadata": {},
    "outputs": [],
@@ -662,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = [(2, 4), (4, 2)]\n",
+    "points = [(2, 4), (4, 2) , (5,8)]\n",
     "\n",
     "def F(w):\n",
     "    return sum((w * x - y)**2 for x, y in points)\n",
@@ -681,8 +687,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15205867",
+   "metadata": {},
+   "source": [
+    "###    <Center>  Feature Vector , Weight Vector, Gradient descent and Stochastic Gradient descent   </Center> \n",
+    "***\n",
+    "\n",
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b8581343",
    "metadata": {},
    "outputs": [],
@@ -773,6 +790,47 @@
     "                increment(weights, eta * y, featureExtractor(x))\n",
     "         \n",
     "    return weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9ad5c7c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def increment(d1, scale, d2):\n",
+    "    for f, v in list(d2.items()):\n",
+    "        d1[f] = d1.get(f, 0) + v * scale\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2f731a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extractWordFeatures(x):\n",
+    "    features = collections.defaultdict(int)\n",
+    "    for word in x.split():\n",
+    "        features[word] += 1\n",
+    "    return features\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b9dd63ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dotProduct(d1, d2):\n",
+    "    if len(d1) < len(d2):\n",
+    "        return dotProduct(d2, d1)\n",
+    "    else:\n",
+    "        return sum(d1.get(f, 0) * v for f, v in list(d2.items()))"
    ]
   },
   {
