Update Sentiment Analysis E3.ipynb

--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -531,7 +531,7 @@
     "\n",
     "<br> This word count dictionary will have as keys all words used in the 3,000 training examples and the dictionary will have as values how many times a word appears considering all 3000 examples, this dictionary will be in the following form:\n",
     "\n",
-    "word_count_dictionary = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 19873' : 3}<br>\n",
+    "<b>word_count_dictionary = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 19873' : 3}</b><br>\n",
     "\n",
     "<br>\n",
     "\n",
