Update Sentiment Analysis E3.ipynb

--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -531,7 +531,7 @@
     "\n",
     "<br> This word count dictionary will have as keys all words used in the 3,000 training examples and the dictionary will have as values how many times a word appears considering all 3000 examples, this dictionary will be in the following form:\n",
     "\n",
-    "<b>word_count_dictionary = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 19873' : 3}</b><br>\n",
+    "<br><b>word_count_dictionary = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 19873' : 3}</b><br>\n",
     "\n",
     "<br>\n",
     "\n",
@@ -540,7 +540,7 @@
     "<br> Applying the extractwordfeatures individually to each review in the training examples will create a feature vector in the form of:\n",
     "\n",
     "\n",
-    "Sentence_1 = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 14' : 1} <br>\n",
+    "<b>Sentence_1 = {'word 1': 1 , 'word 2': 3 , 'word 3': 3 , 'word 4': 3 , 'word 5': 3 ....... 'word 14' : 1}</b> <br>\n",
     "\n",
     "\n",
     "The objective of the dotProduct function is to multiply the weight of each word , the weight value is contained in the word_count_dictionary which is the weight vector, by the number of times the word appears in the sentence, this is called the feature vector, \n",
