Update Sentiment Analysis E3.ipynb

--- a/Sentiment Analysis E3.ipynb
+++ b/Sentiment Analysis E3.ipynb
@@ -39,7 +39,7 @@
     "***\n",
     "\n",
     "\n",
-    "### 5.Testing with OOS user generated examples.\n",
+    "### 5.Testing with user generated examples.\n",
     "***\n"
    ]
   },
